--- a/client/views/boards/templates.html
+++ b/client/views/boards/templates.html
@@ -29,13 +29,15 @@
                     <span class="board-header-btn-text"> {{ board.title }} </span>
                 </a>
                 <div class="board-header-btns left">
-                    <a href="#" class="board-header-btn js-star-board {{#if isStarred }}board-header-btn-enabled{{/ if }}" title="Click to star or unstar this board. Starred boards show up at the top of your boards list.">
-                        <span class="board-header-btn-icon icon-sm icon-star"></span>
-                    </a>
-                    <a href="#" class="board-header-btn perms-btn js-change-vis {{ isMemberAdmin '' 'no-edit' }}" id="permission-level" popoffset='boardPermission'>
-                        <span class="board-header-btn-icon icon-sm icon-{{ toLowerCase board.permission }}"></span>
-                        <span class="board-header-btn-text">{{ board.permission }}</span>
-                    </a>
+                    {{# unless isSandstorm }}
+                        <a href="#" class="board-header-btn js-star-board {{#if isStarred }}board-header-btn-enabled{{/ if }}" title="Click to star or unstar this board. Starred boards show up at the top of your boards list.">
+                            <span class="board-header-btn-icon icon-sm icon-star"></span>
+                        </a>
+                        <a href="#" class="board-header-btn perms-btn js-change-vis {{ isMemberAdmin '' 'no-edit' }}" id="permission-level" popoffset='boardPermission'>
+                            <span class="board-header-btn-icon icon-sm icon-{{ toLowerCase board.permission }}"></span>
+                            <span class="board-header-btn-text">{{ board.permission }}</span>
+                        </a>
+                    {{/ unless }}
                 </div>
             </div>
             {{ > boardWidgets board=board }}
