--- a/client/views/main/templates.html
+++ b/client/views/main/templates.html
@@ -41,16 +41,18 @@
 <template name='AuthLayout'>
     <div id="surface">
         {{# if session 'pop' }}{{ > pop }}{{/if}}
-        <div id="header">
-            <div class="header-boards-button">
-                <a class="header-btn header-boards js-boards-menu" title="View list of boards" href="{{ pathFor route='Boards' }}">
-                    <span class="header-btn-icon icon-lg icon-board light"></span>
-                    <span class="header-btn-text">Boards</span>
-                </a>
+        {{# unless isSandstorm }}
+            <div id="header">
+                <div class="header-boards-button">
+                    <a class="header-btn header-boards js-boards-menu" title="View list of boards" href="{{ pathFor route='Boards' }}">
+                        <span class="header-btn-icon icon-lg icon-board light"></span>
+                        <span class="header-btn-text">Boards</span>
+                    </a>
+                </div>
+                {{ > search }}
+                {{ > memberHeader }}
             </div>
-            {{ > search }}
-            {{ > memberHeader }}
-        </div>
+        {{/ unless }}
         {{ > warning }}
         <div id="content">
             {{ > yield }}
